--- a/src/pages/stats/help-center/components/HelpCenterStatsTable/HelpCenterStatsTable.less
+++ b/src/pages/stats/help-center/components/HelpCenterStatsTable/HelpCenterStatsTable.less
@@ -11,6 +11,10 @@
         overflow: auto;
     }
 
+    .columnHeaderTooltip {
+        margin-right: @layout-spacing-xxs;
+    }
+
     .bodyCellContent {
         cursor: auto;
     }
