--- a/src/pages/stats/help-center/components/OverviewCard/OverviewCard.less
+++ b/src/pages/stats/help-center/components/OverviewCard/OverviewCard.less
@@ -1,3 +1,5 @@
+@import (reference) '~@gorgias/design-tokens/dist/css/layout.less';
+
 :local {
     .bigNumber {
         color: var(--neutral-grey-6);
@@ -13,6 +15,6 @@
         border-radius: 4px;
         border: 1px solid var(--neutral-grey-2);
         background: var(--neutral-grey-1);
-        padding: 16px;
+        padding: @layout-spacing-s;
     }
 }
